added footer. no functionality yet though

--- a/views/index.html
+++ b/views/index.html
@@ -43,6 +43,11 @@
 
         </div>
 
+        <!--FOOTER-->
+        <div class="footer">
+            Help | About | User Account
+        </div>
+
     </body>
 </html>
 
