--- a/public/css/gunks.css
+++ b/public/css/gunks.css
@@ -16,7 +16,7 @@
 }
 
 /*Outer wrapper*/
-body { 
+html, body { 
   background: #D7DEF4;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12pt;
@@ -24,6 +24,7 @@ body {
   font-style: normal;
   z-index: 0;
   position: relative;
+  height:100%;
 }
 
 h1 {
@@ -192,9 +193,14 @@ article {
   background-color: #f1f1f1;
 }
 
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
+.footer {
+  position:absolute;
+  bottom:0;
+  width:97%;
+  height:60px;   /* Height of the footer */
+  text-align: right;
+  font-size: 20px;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
