--- a/views/index.html
+++ b/views/index.html
@@ -43,12 +43,12 @@
 
         </div>
 
-        <!--FOOTER-->
-        <div class="footer">
-            Help | About | User Account
-        </div>
-
     </body>
+
+    <!--FOOTER-->
+    <footer>
+        Help | About | User Account
+    </footer>
 </html>
 
 <script>
