--- a/views/fill_survey.html
+++ b/views/fill_survey.html
@@ -4,20 +4,19 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body id="fill_survey">
+    <body id="fill_survey" onload="getSurveysURL()">
 
 	<div>
-       	     <h1>Fill Survey</h1>
-             <h3>Select the survey you will be filling.</h3>
+       	<h1 id="pageHeader">Fill Survey</h1>
+        <h3>Select the survey you will be filling.</h3>
     </div>
     
     <div id = "search" style = "margin-left: 80%">
-            <input type = "text" value = "Filter By" id = "filterBy">
-            <button type = "button" id = "search">Search</button><br>
+        <input type = "text" value = "Filter By" id = "filterBy">
+        <button type = "button" id = "search">Search</button><br>
     </div>
 
     <div class="file" id="tableForm">
-        <!--<h3 style="text-align: center">Creator | Created | Title | Description </h3>-->
         <table id="columnTable"> <!--Table for the column headers-->
             <col width="125px" />
             <col width="350px" />
@@ -36,23 +35,27 @@
             <col width="375px" />
             <col width="500px" />
         </table>
+
+        <div id="singSurv"></div>
         
     </div>
     
     <script type="text/javascript">
+        var heyo = [];
+        var everythingElse = [];
+        var surveyTitle = "";
         
         document.getElementById("surveyTable").addEventListener("click", function() {
             highlight_row();
         }, false);
-
         document.getElementById("surveyTable").addEventListener("dblclick", function() {
-            pullUpSurvey();
+            getSurveyID();
         }, false);
-
-       // function showSurveyList() {
-        //var test = document.getElementById('surveyTable');
-        var url = 'http://10.10.9.145:3000/api/surveys';
-        fetch(url) // Connection to api
+        // TODO: add "de-highlighter"
+        
+        function getSurveysURL() { // This is the function that gets the survey info 
+            var url = 'http://10.10.9.145:3000/api/surveys';
+            fetch(url) // Connection to api
             .then(surveyList => surveyList.json()) // Transform data into json
             .then(function(data) {
                 let result = [];
@@ -66,18 +69,15 @@
                     } = survey
                     result = [
                         `${SurvCreator}`,
-                         `${SurvCreated}`,
-                         `${SurvTitle}`,
-                         `${SurvDescription}`];
-                    let idk = JSON.stringify(result);
-                    //document.getElementById("surveyTable").innerHTML = makeTableHTML();
+                        `${SurvCreated}`,
+                        `${SurvTitle}`,
+                        `${SurvDescription}`];
+                    heyo.unshift(SurvID);
                     makeTableHTML(result);
                 });
-
             })
-        //}
-
-        function makeTableHTML(info) {
+        }
+        function makeTableHTML(info) { // This is the function that takes the survey info and puts it in a table
             var survTable =  document.getElementById("surveyTable");
             var newRow = survTable.insertRow(0);
             for (var i = 0; i < info.length; i++) {
@@ -85,7 +85,6 @@
                 newCell.innerHTML = info[i];
             }
         }
-
         function highlight_row() {
             var table = document.getElementById('surveyTable');
             var cells = table.getElementsByTagName('td');
@@ -109,18 +108,84 @@
                 }
             }
         }
-
-        function pullUpSurvey() { //This is where I need to figure out how to pull up a survey
-            /*var url = 'http://10.10.9.145:3000/api/surveys/single/' + {SurvId};*/
-            document.write("It worked");
+        function getSurveyID() { //This is where I need to figure out how to pull up a survey
+            var table = document.getElementById('surveyTable');
+            var cells = table.getElementsByTagName('td');
+            
+            for (var i = 0; i < cells.length; i++) {
+                // Take each cell
+                var cell = cells[i];
+                // do something on onclick event for cell
+                cell.onclick = function () {
+                    // Get the row id where the cell exists
+                    var rowId = this.parentNode.rowIndex;
+                    
+                    var rowsNotSelected = table.getElementsByTagName('tr');
+                    for (var row = 0; row < rowsNotSelected.length; row++) {
+                        rowsNotSelected[row].style.backgroundColor = "";
+                        rowsNotSelected[row].classList.remove('selected');
+                    }
+                    var rowSelected = table.getElementsByTagName('tr')[rowId];
+                    var idValue = heyo[rowId]
+                    var url = 'http://10.10.9.145:3000/api/surveys/gather/' + idValue.toString();
+                    pullUpSurvey(url);
+                }
+            }
         }
-
+        function pullUpSurvey(survURL) { // This is supposed to get all the questions for a specified survey
+            fetch(survURL) // Connection to api
+            .then(singleSurveyList => singleSurveyList.json()) // Transform data into json
+            .then(function(singleSurveyData) {
+                let singleSurveyResult = [];
+                singleSurveyData.forEach((singleSurvey) => {
+                    const {
+                        SurvID,
+                        SurvCreated,
+                        SurvCreator,
+                        SurvTitle,
+                        SurvDescription,
+                        QuesID,
+                        Ques_text,
+                        ChoiID,
+                        Choi_text,
+                        Choi_text_id
+                    } = singleSurvey
+                    singleSurveyResult = [
+                        `${Ques_text}`,
+                        `${Choi_text}`,
+                        `${Choi_text_id}`
+                    ]; // = Name,textbox,2Name,text,2Name,text,2Salary: ,$0.00-$10.00,1Salary: ,$11.00-$20.00,1
+                    everythingElse.unshift(singleSurveyResult);
+                    surveyTitle = SurvTitle;
+                    //everythingElse.unshift(SurvTitle);
+                });
+                formatResults(surveyTitle, everythingElse); 
+            })           
+        }
+        function formatResults(title, re) { // This will output the questions for a specified survey
+            document.getElementById("fill_survey").innerHTML = "";
+            var newHeader = document.createElement("H1");
+            newHeader.innerText = title;
+            document.body.appendChild(newHeader);
+            for (var i = 0; i < re.length; i++) {
+                var para = document.createElement("DIV");
+                para.setAttribute("id", i.toString());
+                para.innerText = re[i][0]; // Insert text
+                document.body.appendChild(para); 
+                
+               /*if (re[i][2] == 1){ 
+                    var radioBtn = document.createElement("INPUT");
+                    radioBtn.setAttribute("type", "radio");
+                    document.body.appendChild(radioBtn);
+                } else if (re[i][2] == 2) {
+                    var txtBox = document.createElement("INPUT");
+                    txtBox.setAttribute("type", "text");
+                    document.body.appendChild(txtBox);
+                }*/
+            }
+        }
     </script>
 
 
     </body>
 </html>
-
-<script>
-
-</script>
