Small Changes before client meeting

--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,12 @@
                 <a href="#" onclick="load_tab('create_question')">Questions</a>
                 <a href="#" onclick="load_tab('create_survey')">Surveys</a>
             </div>
+
+            <button class="dropdown-btn" id="set">Settings ></button>
+            <div class="dropdown-container">
+                <a href="#" onclick="load_tab('admin_space')">Admin</a>
+                <a href="#" onclick="load_tab('admin_space')">User</a>
+            </div>
         </div>
 
         <!--CONTAINER WHERE ALL THE SEPARATE PAGES ARE GOING TO GO-->
