--- a/views/create_question.html
+++ b/views/create_question.html
@@ -92,7 +92,7 @@ function postQuestion(gotText, gotTypeM, gotTypeT, ai, bi, ci, di){
         }).then((res) => res.json())
         .then((data) =>  console.log(data))
         .catch((err)=>console.log(err)) 
-        alert(newResult);
+        alert("A Question has been added to the database!");
     }else if(typeMu.checked){ // multiple choice 
         // pushing all multiple choice questions to an array
         questionOp.push(a);
