--- a/views/view_surveys.html
+++ b/views/view_surveys.html
@@ -1,13 +1,13 @@
-﻿
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="css/gunks.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body id="display_surveys">
+﻿<html lang="en">
+    <head>
+        <link rel="stylesheet" href="css/gunks.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body id="fill_survey" onload="getSurveysURL()">
+
     <div>
-        <h1>View Survey</h1>
+        <h1 id="pageHeader">View Survey</h1>
         <h3>Select the survey you wish to view.</h3>
     </div>
 
@@ -18,8 +18,7 @@
 
     <div class="file" id="tableForm">
         <!--<h3 style="text-align: center">Creator | Created | Title | Description </h3>-->
-        <table id="columnTable">
-            <!--Table for the column headers-->
+        <table id="columnTable"> <!--Table for the column headers-->
             <col width="125px" />
             <col width="350px" />
             <col width="375px" />
@@ -30,50 +29,57 @@
                 <th>Title</th>
                 <th>Description</th>
             </tr>
-        </table>    
-        <table id="surveyTable">
-            <!--Table for data from api-->
+        </table>
+        <table id="surveyTable"> <!--Table for data from api-->
             <col width="125px" />
             <col width="350px" />
             <col width="375px" />
             <col width="500px" />
         </table>
+        <div id="singSurv"></div>
     </div>
 
+
+
     <script type="text/javascript">
+        var heyo = []; //Thanks Molly for your great code!
+        var everythingElse = [];
+        var surveyTitle = "";
 
         document.getElementById("surveyTable").addEventListener("click", function () {
             highlight_row();
         }, false);
 
         document.getElementById("surveyTable").addEventListener("dblclick", function () {
-            pullUpSurvey();
+            getSurveyID();
         }, false);
 
-        var url = 'http://10.10.9.145:3000/api/surveys';
-        fetch(url) // Connection to api
+        function getSurveysURL() { // This is the function that gets the survey info
+            var url = 'http://10.10.9.145:3000/api/surveys';
+            fetch(url) // Connection to api
             .then(surveyList => surveyList.json()) // Transform data into json
-            .then(function(data) {
-                let result = [];
-                data.forEach((survey) => {
-                    const {
+            .then(function (data) {
+                 let result = [];
+                 data.forEach((survey) => {
+                     const {
                         SurvID,
                         SurvCreated,
                         SurvCreator,
                         SurvTitle,
                         SurvDescription
-                    } = survey
-                    result = [
-                        `${SurvCreator}`,
+                     } = survey
+                     result = [
+                         `${SurvCreator}`,
                          `${SurvCreated}`,
                          `${SurvTitle}`,
                          `${SurvDescription}`];
-                    let idk = JSON.stringify(result);
-                    //document.getElementById("surveyTable").innerHTML = makeTableHTML();
-                    makeTableHTML(result);
-                });
-
+                     let idk = JSON.stringify(result);
+                     heyo.unshift(SurvID);
+                     //document.getElementById("surveyTable").innerHTML = makeTableHTML();
+                     makeTableHTML(result);
+                    });
             })
+        }
 
         function makeTableHTML(info) {
             var survTable =  document.getElementById("surveyTable");
@@ -87,7 +93,7 @@
         function highlight_row() {
             var table = document.getElementById('surveyTable');
             var cells = table.getElementsByTagName('td');
-            
+
             for (var i = 0; i < cells.length; i++) {
                 // Take each cell
                 var cell = cells[i];
@@ -95,7 +101,7 @@
                 cell.onclick = function () {
                     // Get the row id where the cell exists
                     var rowId = this.parentNode.rowIndex;
-                    
+
                     var rowsNotSelected = table.getElementsByTagName('tr');
                     for (var row = 0; row < rowsNotSelected.length; row++) {
                         rowsNotSelected[row].style.backgroundColor = "";
@@ -108,17 +114,89 @@
             }
         }
 
-        function pullUpSurvey() { //This is where I need to figure out how to pull up a survey
-            /*var url = 'http://10.10.9.145:3000/api/surveys/single/' + {SurvId};*/
-            document.write("It worked");
+        function getSurveyID() { //This is where I need to figure out how to pull up a survey
+            var table = document.getElementById('surveyTable');
+            var cells = table.getElementsByTagName('td');
+
+            for (var i = 0; i < cells.length; i++) {
+            // Take each cell
+                var cell = cells[i];
+                // do something on onclick event for cell
+                cell.onclick = function () {
+                    // Get the row id where the cell exists
+                    var rowId = this.parentNode.rowIndex;
+
+                    var rowsNotSelected = table.getElementsByTagName('tr');
+                    for (var row = 0; row < rowsNotSelected.length; row++) {
+                            rowsNotSelected[row].style.backgroundColor = "";
+                            rowsNotSelected[row].classList.remove('selected');
+                    }
+                    var rowSelected = table.getElementsByTagName('tr')[rowId];
+                    var idValue = heyo[rowId]
+                    var url = 'http://10.10.9.145:3000/api/surveys/gather/' + idValue.toString();
+                    pullUpSurvey(url);
+                    }
+                }
+            }
+
+        function pullUpSurvey(survURL) { //This is where I need to figure out how to pull up a survey
+                /*document.write("It worked");*/
+                fetch(survURL) // Connection to api
+                .then(singleSurveyList => singleSurveyList.json()) // Transform data into json
+                .then(function (singleSurveyData) {
+                    let singleSurveyResult = [];
+                    singleSurveyData.forEach((singleSurvey) => {
+                           const {
+                               SurvID,
+                               SurvCreated,
+                               SurvCreator,
+                               SurvTitle,
+                               SurvDescription,
+                               QuesID,
+                               Ques_text,
+                               ChoiID,
+                               Choi_text,
+                               Choi_text_id
+                           } = singleSurvey
+                           singleSurveyResult = [
+                               `${SurvTitle}`,
+                               `${SurvCreator}`,
+                               `${SurvCreated}`,
+                               `${Ques_text}`,
+                               `${Choi_text}`,
+                               `${Choi_text_id}`
+                           ]; // = Name,textbox,2Name,text,2Name,text,2Salary: ,$0.00-$10.00,1Salary: ,$11.00-$20.00,1
+                           everythingElse.unshift(singleSurveyResult);
+                           surveyTitle = SurvTitle;
+                           //everythingElse.unshift(SurvTitle);
+                           });
+                           formatResults(surveyTitle, everythingElse);
+                        })
         }
 
+        function formatResults(title, re) { // This will output the questions for a specified survey
+                    document.getElementById("fill_survey").innerHTML = "";
+                    var newHeader = document.createElement("H1");
+                    newHeader.innerText = title;
+                    document.body.appendChild(newHeader);
+                    for (var i = 0; i < re.length; i++) {
+                        var para = document.createElement("DIV");
+                        para.setAttribute("id", i.toString());
+                        para.innerText = re[i][0]; // Insert text
+                        document.body.appendChild(para);
+
+                        /*if (re[i][2] == 1){ 
+                             var radioBtn = document.createElement("INPUT");
+                             radioBtn.setAttribute("type", "radio");
+                             document.body.appendChild(radioBtn);
+                         } else if (re[i][2] == 2) {
+                             var txtBox = document.createElement("INPUT");
+                             txtBox.setAttribute("type", "text");
+                             document.body.appendChild(txtBox);
+                         }*/
+                    }
+        }
     </script>
 
     </body>
 </html>
-
-<script>
-
-</script>
-
