--- a/views/view_records.html
+++ b/views/view_records.html
@@ -1,13 +1,13 @@
-﻿
-    <html lang="en">
+﻿<html lang="en">
     <head>
         <link rel="stylesheet" href="css/gunks.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body id="display_records">
+
+    <body id="view_record" onload="getRecordsURL()">
         <div>
-            <h1>View Records</h1>
+            <h1 id="pageHeader">View Records</h1>
             <h3>Select the record you wish to view.</h3>
         </div>
 
@@ -18,8 +18,7 @@
 
         <div class="file" id="tableForm">
             <!--<h3 style="text-align: center">Interviewer | Filled | Interview Title | Survey Title </h3>-->
-            <table id="columnTable">
-                <!--Table for the column headers-->
+            <table id="columnTable"> <!--Table for the column headers-->
                 <col width="125px" />
                 <col width="350px" />
                 <col width="375px" />
@@ -31,53 +30,62 @@
                     <th>Survey Title</th>
                 </tr>
             </table>
-            <table id="surveyTable">
-                <!--Table for data from api-->
+            <table id="surveyTable"> <!--Table for data from api-->
                 <col width="125px" />
                 <col width="350px" />
                 <col width="375px" />
                 <col width="500px" />
             </table>
+            <div id="singSurv"></div>
         </div>
 
+
+
         <script type="text/javascript">
+            var heyo = []; //Thanks Molly for your great code!
+            var everythingElse = [];
+            var surveyTitle = "";
 
             document.getElementById("surveyTable").addEventListener("click", function () {
                 highlight_row();
             }, false);
 
             document.getElementById("surveyTable").addEventListener("dblclick", function () {
-                pullUpInterview();
+                getRecordID();
             }, false);
 
-            var url = 'http://10.10.9.145:3000/api/interviews';
-            fetch(url) // Connection to api
-                .then(surveyList => surveyList.json()) // Transform data into json
-                .then(function(data) {
-                    let result = [];
-                    data.forEach((interview) => {
-                        const {
-                            InteID,
-                            Filled_by,
-                            Date_filled,
-                            SurvID,
-                            InteTitle,
-                            SurvCreated,
-                            SurvCreator,
-                            SurvTitle,
-                            SurvDescription
-                        } = interview
-                        result = [
-                            `${Filled_by}`,
-                            `${Date_filled}`,
-                            `${InteTitle}`,
-                            `${SurvTitle}`];
-                        let idk = JSON.stringify(result);
-                        //document.getElementById("surveyTable").innerHTML = makeTableHTML();
-                        makeTableHTML(result);
-                    });
+            function getRecordsURL() { // This is the function that gets the survey info
+                var url = 'http://10.10.9.145:3000/api/interviews';
+                fetch(url) // Connection to api
+                    .then(surveyList => surveyList.json()) // Transform data into json
+                    .then(function (data) {
+                        let result = [];
+                        data.forEach((interview) => {
+                            const {
+                                InteID,
+                                Filled_by,
+                                Date_filled,
+                                SurvID,
+                                InteTitle,
+                                SurvCreated,
+                                SurvCreator,
+                                SurvTitle,
+                                SurvDescription
+                            } = interview
+                            result = [
+                                `${Filled_by}`,
+                                `${Date_filled}`,
+                                `${InteTitle}`,
+                                `${SurvTitle}`];
+                            let idk = JSON.stringify(result);
+                            heyo.unshift(SurvID);
+                            //document.getElementById("surveyTable").innerHTML = makeTableHTML();
+                            makeTableHTML(result);
+                        });
 
-                })
+                    })
+            }
+
         function makeTableHTML(info) {
             var survTable =  document.getElementById("surveyTable");
             var newRow = survTable.insertRow(0);
@@ -96,31 +104,88 @@
                 var cell = cells[i];
                 // do something on onclick event for cell
                 cell.onclick = function () {
-                    // Get the row id where the cell exists
-                    var rowId = this.parentNode.rowIndex;
+                // Get the row id where the cell exists
+                var rowId = this.parentNode.rowIndex;
                     
-                    var rowsNotSelected = table.getElementsByTagName('tr');
-                    for (var row = 0; row < rowsNotSelected.length; row++) {
-                        rowsNotSelected[row].style.backgroundColor = "";
-                        rowsNotSelected[row].classList.remove('selected');
-                    }
-                    var rowSelected = table.getElementsByTagName('tr')[rowId];
-                    rowSelected.style.backgroundColor = "gray";
-                    rowSelected.className += " selected";
+                var rowsNotSelected = table.getElementsByTagName('tr');
+                for (var row = 0; row < rowsNotSelected.length; row++) {
+                    rowsNotSelected[row].style.backgroundColor = "";
+                    rowsNotSelected[row].classList.remove('selected');
+                }
+                var rowSelected = table.getElementsByTagName('tr')[rowId];
+                rowSelected.style.backgroundColor = "gray";
+                rowSelected.className += " selected";
                 }
             }
         }
 
-        function pullUpInterview() { //This is where I need to figure out how to pull up an interview
-            /*var url = 'http://10.10.9.145:3000/api/interviews/gather' + {SurvId};*/
-            document.write("It worked");
+        function getRecordID() { //This is where I need to figure out how to pull up a survey
+            var table = document.getElementById('surveyTable');
+            var cells = table.getElementsByTagName('td');
+
+            for (var i = 0; i < cells.length; i++) {
+            // Take each cell
+                var cell = cells[i];
+                // do something on onclick event for cell
+                cell.onclick = function () {
+                    // Get the row id where the cell exists
+                    var rowId = this.parentNode.rowIndex;
+
+                    var rowsNotSelected = table.getElementsByTagName('tr');
+                    for (var row = 0; row < rowsNotSelected.length; row++) {
+                            rowsNotSelected[row].style.backgroundColor = "";
+                            rowsNotSelected[row].classList.remove('selected');
+                    }
+                    var rowSelected = table.getElementsByTagName('tr')[rowId];
+                    var idValue = heyo[rowId]
+                    var url = 'http://10.10.9.145:3000/api/interviews/gather/' + idValue.toString();
+                    pullUpInterview(url);
+                }
+            }
         }
+
+        function pullUpInterview(survURL) { //This is where I need to figure out how to pull up a survey
+                /*document.write("It worked");*/
+                fetch(survURL) // Connection to api
+                .then(singleSurveyList => singleSurveyList.json()) // Transform data into json
+                .then(function (singleSurveyData) {
+                    let singleSurveyResult = [];
+                    singleSurveyData.forEach((singleSurvey) => {
+                           const {
+                               InteID,
+                               Filled_by,
+                               Date_filled,
+                               SurvID,
+                               InteTitle,
+                               SurvCreated,
+                               SurvCreator,
+                               SurvTitle,
+                               SurvDescription,
+                               QuesID,
+                               Ques_text,
+                               ChoiID,
+                               Choi_text,
+                               Choi_text_id
+                           } = singleSurvey
+                           singleSurveyResult = [
+                               `${Ques_text}`,
+                               `${Choi_text}`,
+                               `${Choi_text_id}`]; // = Name,textbox,2Name,text,2Name,text,2Salary: ,$0.00-$10.00,1Salary: ,$11.00-$20.00,1
+                           everythingElse.unshift(singleSurveyResult);
+                           surveyTitle = SurvTitle;
+                           //everythingElse.unshift(SurvTitle);
+                    });
+                    formatResults(surveyTitle, everythingElse);
+                })
+        }
+            
+        function formatResults(title, body) { // This will output the questions for a specified survey
+            document.getElementById("view_record").innerHTML = "";
+            var newHeader = document.createElement("H1");
+            newHeader.innerText = title;
+            document.getElementById("view_record").innerHTML = newHeader.outerHTML + body;
+        }
+
         </script>
     </body>
-    </html>
-
-
-
-<script>
-	
-</script>
+</html>
