--- a/views/view_surveys.html
+++ b/views/view_surveys.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
-    <body id="fill_survey" onload="getSurveysURL()">
+    <body id="view_survey" onload="getSurveysURL()">
     <div>
         <h1 id="pageHeader">View Survey</h1>
         <h3>Select the survey you wish to view.</h3>
@@ -75,7 +75,6 @@
                          `${SurvDescription}`];
                      let idk = JSON.stringify(result);
                      heyo.unshift(SurvID);
-                     //document.getElementById("surveyTable").innerHTML = makeTableHTML();
                      makeTableHTML(result);
                     });
             })
@@ -94,12 +93,9 @@
             var table = document.getElementById('surveyTable');
             var cells = table.getElementsByTagName('td');
 
-            for (var i = 0; i < cells.length; i++) {
-                // Take each cell
-                var cell = cells[i];
-                // do something on onclick event for cell
-                cell.onclick = function () {
-                    // Get the row id where the cell exists
+            for (var i = 0; i < cells.length; i++) { // Take each cell
+                var cell = cells[i]; // do something on onclick event for cell
+                cell.onclick = function () { // Get the row id where the cell exists
                     var rowId = this.parentNode.rowIndex;
 
                     var rowsNotSelected = table.getElementsByTagName('tr');
@@ -122,7 +118,7 @@
             // Take each cell
                 var cell = cells[i];
                 // do something on onclick event for cell
-                cell.onclick = function () {
+                cell.oclick = function () {
                     // Get the row id where the cell exists
                     var rowId = this.parentNode.rowIndex;
 
@@ -140,7 +136,6 @@
         }
 
         function pullUpSurvey(survURL) { //This is where I need to figure out how to pull up a survey
-                /*document.write("It worked");*/
                 fetch(survURL) // Connection to api
                 .then(singleSurveyList => singleSurveyList.json()) // Transform data into json
                 .then(function (singleSurveyData) {
@@ -164,17 +159,16 @@
                                `${Choi_text_id}`]; // = Name,textbox,2Name,text,2Name,text,2Salary: ,$0.00-$10.00,1Salary: ,$11.00-$20.00,1
                            everythingElse.unshift(singleSurveyResult);
                            surveyTitle = SurvTitle;
-                           //everythingElse.unshift(SurvTitle);
                     });
-                           formatResults(surveyTitle, everythingElse);
+                    formatResults(surveyTitle, everythingElse);
                 })
         }
 
         function formatResults(title, body) { // This will output the questions for a specified survey
-                document.getElementById("fill_survey").innerHTML = "";
-                var newHeader = document.createElement("H1");
-                newHeader.innerText = title;
-                document.getElementById("fill_survey").innerHTML = newHeader.outerHTML + body;
+            document.getElementById("view_survey").innerHTML = "";
+            var newHeader = document.createElement("H1");
+            newHeader.innerText = title;
+            document.getElementById("view_survey").innerHTML = newHeader.outerHTML + body;
         }
 
     </script>
