--- a/views/admin_space.html
+++ b/views/admin_space.html
@@ -4,12 +4,19 @@
 <body>
 
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="css/gunks.css">
+        <title>admin_space</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale = 1">
-        <link rel="stylesheet" href="css/gunks.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        
         <div class="index" id="adminSpace">
             <h1>Admin Space</h1>
 
@@ -33,6 +40,20 @@
             <input type="text" id="updateUserPassword"><br><br>
             <label>Set new privledges:</label>
             <input type="text" id="updateUserPrivledges"><br><br>
+            <label>Set new Privlages: </label>
+            <div class="dropdown show">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown link
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            <br>
+            <br>
             <button type="button" id="Submit">Submit ></button><br>
 
             <h2>Upload an image for the project:</h2>
@@ -48,12 +69,12 @@
 <script type="text/javascript">
     var first = "";
     var last = "";
-    var email ="";
-    var user ="";
+    var email = "";
+    var user = "";
     var password = "";
     document.getElementById("submitU").addEventListener("click", function () {
-                newUser();
-            }, false);
+        newUser();
+    }, false);
 
     function newUser() {
         first = document.getElementById('firstN').value;
@@ -85,6 +106,5 @@
             .then((data) => console.log(data))
             .catch((err) => console.log(err))
     }
-
 
 </script>
